--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,7 @@ a {
     transition: opacity 0.3s ease-out;
 }
 
+
 iframe {
     border: 0 !important;
 }
@@ -585,6 +586,7 @@ section {
     opacity: 0.6;
 }
 
+
 #nav-trigger span.open, #nav-trigger span.open:hover {
     color: #111;
 }
@@ -658,6 +660,8 @@ nav#nav-mobile a:hover {
     opacity: 1;
 }
 
+
+
 /* --------- 2.5 Social Elements ---------- */
 
 #header .col-4 {
@@ -730,7 +734,7 @@ h3 {
 }
 
 h4 {
-    padding: 7px 0;
+    padding: 10px 0;
 }
 
 h5 {
@@ -772,6 +776,18 @@ h6 {
     color: #ccc;
     letter-spacing: 2px;
     padding-bottom: 0;
+}
+
+.section-heading h4 {
+    font-size: 20px;
+    font-weight: bold;
+    color: #d2b356;
+    letter-spacing: 2px;
+    padding-bottom: 0;
+}
+
+.section-heading h4:hover {
+    text-decoration: underline;
 }
 
 /*------------------------------------------------------------------------------------------*/
@@ -935,8 +951,7 @@ blockquote {
 }
 
 .testimonial img {
-    max-height: 120px;
-    border-radius: 250em;
+    max-height: 100px;
 }
 
 .testimonial footer {
@@ -1388,6 +1403,7 @@ blockquote {
     color: #fff;
 }
 
+
 #clients img {
     display: inline-block;
     padding: 15px 25px;
@@ -1422,6 +1438,56 @@ blockquote {
     text-align: center;
     display: inline-block;
 }
+
+
+
+
+
+#Teaching a {
+    display: block;
+    text-align: center;
+    position: relative;
+    text-transform: uppercase;
+    font-weight: bold;
+    color: #fff;
+}
+
+
+#Teaching img {
+    display: inline-block;
+    padding: 15px 25px;
+}
+
+.Teaching-overlay {
+    background: rgba(0, 0, 0, 0.8);
+    position: absolute;
+    top;
+    0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    -webkit-transition: all 0.3s ease-out;
+    -moz-transition: all 0.3s ease-out;
+    -o-transition: all 0.3s ease-out;
+    transition: all 0.3s ease-out;
+}
+
+#Teaching a:hover .client-overlay {
+    opacity: 1;
+}
+
+.Teaching-overlay span {
+    position: absolute;
+    top: 48%;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    display: inline-block;
+}
+
 
 /* --------- 6.7 Pricing Table ---------- */
 
